add templates plateau de jeu ( room ) et zheros ( choix heros )

--- a/WebRTC/flask/app/static/css/main.css
+++ b/WebRTC/flask/app/static/css/main.css
@@ -23,3 +23,11 @@ footer {
     width: 80%;
     margin: auto;
 }
+
+
+
+.chatbox_container{
+    overflow-y: auto;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+}
