--- a/WebRTC/flask/app/templates/base.html
+++ b/WebRTC/flask/app/templates/base.html
@@ -12,7 +12,7 @@
       			</a>
    			 </div>
    			 <div class="navbar-text">
-   			 	<a href="#" class="navbar-link">zHéros</a>
+   			 	<a href="/zheros" class="navbar-link">zHéros</a>
    			 </div>
    			 <div class="navbar-text navbar-right" style="margin-right:20px;">
    			 	<a href="/login" class="navbar-link">Login</a>
@@ -21,5 +21,11 @@
   		</div>
 	</nav>
     {% block content %}{% endblock %}
+
+    <footer style="margin-top: 100px">
+      <center>
+        <i style="color:gray;">&copy; Projet Python groupe web@cadémie bompar_a & Reygni_p</i>
+      </center>
+  </footer>
   </body>
 </html>
