--- a/WebRTC/flask/app/templates/room.html
+++ b/WebRTC/flask/app/templates/room.html
@@ -1,18 +1,85 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>WebRTC Example</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
-    <script src="{{ url_for('static', filename='js/webrtc-adapter.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-</head>
-<body>
-    {{room_id}}
-    <div class="container">
-        <div class="videos">
+{% extends "base.html" %}
+{% block content %}
+{{room_id}}
+<script src="{{ url_for('static', filename='js/webrtc-adapter.js') }}"></script>
+<script src="{{ url_for('static', filename='js/room.js') }}"></script>
+<div class="container">
+        <div class="col-lg-12">
+            <div class="col-lg-3">
+                <h2>Mage Dayknor</h2>
+                <h3>Level : 9</h3>
+                <h4>Progression : </h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="75"
+                      aria-valuemin="0" aria-valuemax="100" style="width:75%; background-color: green">
+                        <span >156 / 200 EXP</span>
+                    </div>
+                </div>
+                <img src="{{ url_for('static', filename='img/mage.jpg') }}" width="100%" height="200px">
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                      aria-valuemin="0" aria-valuemax="100" style="width:70%; background-color: red">
+                        <span >20/30 HP</span>
+                    </div>
+                </div>
+                <h3>Points de compétence </h3>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="50"
+                      aria-valuemin="0" aria-valuemax="100" style="width:50%; background-color: blue">
+                        <span >15 / 30 SP</span>
+                    </div>
+                </div>
+                <h3>Visio</h3>
+                <div class="visioconf">
+                    <div class="localvideos">
+                        <video id="local" autoplay muted width="100%"></video>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <center><h2>Plateau de jeu N° {{room_id}}</h2></center>
+                <br /> <br /> <br /> <br /> <br /> <br /> <br />
+
+                <div class="chatbox_container">
+                    <p><span style="color: red;">Maitre du jeu</span>  Btx dit : Bonjour et bienvenue sur la room {{room_id}}, je serais le maitre du jeu de cette partie !</p>
+                    <p><span style="color: blue">Mage</span> Dayknor rejoint la partie {{room_id}} !</p>
+                    <p><span style="color: blue">Mage</span> Dayknor dit -> : Salut all</p>
+                    <p><span style="color: red;">Maitre du jeu</span> Btx dit : Bonjour et bienvenue sur la room {{room_id}} Mage Dayknor, est-tu prêt a m'affronter ?</p>
+                    <p><span style="color: blue">Mage</span> Dayknor dit -> : Oui, c'est partit !</p>
+                    <p><span style="color: red;">Maitre du jeu</span> Btx dit : Quand tu sens prêt, fait /combat pour lancer l'aventure !</p>
+                </div>
+                <div class="col-lg-10">
+                    <input type="text"  class="form-control" placeholder="tapez votre message ...">
+                   
+                </div>
+                <div class="col-lg-2">
+                    <button type="button" class="btn btn-primary pull-right" style="width: ">Envoyer</button>
+                </div>
+            </div>
+        
+        <div class="col-lg-3">
+                <h2>Maitre du jeu <b>JudgeDead</b></h2>
+                <img src="{{ url_for('static', filename='img/mj.jpg') }}" width="100%" height="200px">
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="50"
+                      aria-valuemin="0" aria-valuemax="100" style="width:50%; background-color: red">
+                        <span >1800 HP/30068 HP</span>
+                    </div>
+                </div>
+                <h3>Visio</h3>
+                <div class="remotevideos">
+                 <video id="remote" autoplay ></video>
+                </div>
+        </div>
+        </div>
+    </div>
+    <footer>
+        <span id="status" class="small"></span>
+        <span id="streaming" class="small"></span>
+    </footer>
+        <!--<div class="videos" width="200px" height="200px">
             <div class="remotevideos">
-                <video id="remote" autoplay></video>
+                <video id="remote" autoplay ></video>
                 REMOTE
             </div>
             <div class="localvideos">
@@ -20,10 +87,5 @@
                 LOCAL
             </div>
         </div>
-    </div>
-    <footer>
-        <span id="status" class="small"></span>
-        <span id="streaming" class="small"></span>
-    </footer>
-</body>
-</html>
+    -->
+{% endblock %}
