--- a/WebRTC/flask/app/templates/room.html
+++ b/WebRTC/flask/app/templates/room.html
@@ -3,9 +3,10 @@
 {{room_id}}
 <script src="{{ url_for('static', filename='js/webrtc-adapter.js') }}"></script>
 <script src="{{ url_for('static', filename='js/room.js') }}"></script>
+<script src="{{ url_for('static', filename='js/chat.js') }}"></script>
 <div class="container">
         <div class="col-lg-12">
-            <div class="col-lg-3">
+            <!-- <div class="col-lg-3">
                 <h2>Mage Dayknor</h2>
                 <h3>Level : 9</h3>
                 <h4>Progression : </h4>
@@ -35,12 +36,12 @@
                         <video id="local" autoplay muted width="100%"></video>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="col-lg-6">
                 <center><h2>Plateau de jeu N° {{room_id}}</h2></center>
                 <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
-                <div class="chatbox_container">
+                <div class="chatbox_container" id="chatbox_container">
                     <p><span style="color: red;">Maitre du jeu</span>  Btx dit : Bonjour et bienvenue sur la room {{room_id}}, je serais le maitre du jeu de cette partie !</p>
                     <p><span style="color: blue">Mage</span> Dayknor rejoint la partie {{room_id}} !</p>
                     <p><span style="color: blue">Mage</span> Dayknor dit -> : Salut all</p>
@@ -49,15 +50,15 @@
                     <p><span style="color: red;">Maitre du jeu</span> Btx dit : Quand tu sens prêt, fait /combat pour lancer l'aventure !</p>
                 </div>
                 <div class="col-lg-10">
-                    <input type="text"  class="form-control" placeholder="tapez votre message ...">
+                    <input type="text" id="text_value" class="form-control" placeholder="tapez votre message ...">
                    
                 </div>
                 <div class="col-lg-2">
-                    <button type="button" class="btn btn-primary pull-right" style="width: ">Envoyer</button>
+                    <button type="button" id="btn_send" class="btn btn-primary pull-right">Envoyer</button>
                 </div>
             </div>
         
-        <div class="col-lg-3">
+        <!-- <div class="col-lg-3">
                 <h2>Maitre du jeu <b>JudgeDead</b></h2>
                 <img src="{{ url_for('static', filename='img/mj.jpg') }}" width="100%" height="200px">
                 <div class="progress">
@@ -70,7 +71,7 @@
                 <div class="remotevideos">
                  <video id="remote" autoplay ></video>
                 </div>
-        </div>
+        </div> -->
         </div>
     </div>
     <footer>
