--- a/WebRTC/flask/app/templates/room.html
+++ b/WebRTC/flask/app/templates/room.html
@@ -6,7 +6,7 @@
 <script src="{{ url_for('static', filename='js/chat.js') }}"></script>
 <div class="container">
         <div class="col-lg-12">
-            <!-- <div class="col-lg-3">
+            <div class="col-lg-3">
                 <h2>Mage Dayknor</h2>
                 <h3>Level : 9</h3>
                 <h4>Progression : </h4>
@@ -36,7 +36,7 @@
                         <video id="local" autoplay muted width="100%"></video>
                     </div>
                 </div>
-            </div> -->
+            </div>
             <div class="col-lg-6">
                 <center><h2>Plateau de jeu N° {{room_id}}</h2></center>
                 <br /> <br /> <br /> <br /> <br /> <br /> <br />
@@ -58,7 +58,7 @@
                 </div>
             </div>
         
-        <!-- <div class="col-lg-3">
+        <div class="col-lg-3">
                 <h2>Maitre du jeu <b>JudgeDead</b></h2>
                 <img src="{{ url_for('static', filename='img/mj.jpg') }}" width="100%" height="200px">
                 <div class="progress">
@@ -71,7 +71,7 @@
                 <div class="remotevideos">
                  <video id="remote" autoplay ></video>
                 </div>
-        </div> -->
+        </div>
         </div>
     </div>
     <footer>
