--- a/WebRTC/flask/app/templates/login.html
+++ b/WebRTC/flask/app/templates/login.html
@@ -4,6 +4,8 @@
     	{{ form.hidden_tag() }}
     	{{ form.name.label }} {{ form.name(size=20) }}
     	{{ form.pwd.label }} {{ form.pwd(size=20) }}
+
     	<input type="submit" value="Go">
 	</form>
+	<h1>Test : {{login}}</h1>
 {% endblock %}
