--- a/WebRTC/flask/app/templates/mj.html
+++ b/WebRTC/flask/app/templates/mj.html
@@ -8,6 +8,7 @@
     <script src="{{ url_for('static', filename='js/mj.js') }}"></script>
 </head>
 <body>
+    {{login}}
     {{room_id}}
     <div class="container">
         <div class="videos">
