--- a/WebRTC/flask/app/templates/base.html
+++ b/WebRTC/flask/app/templates/base.html
@@ -25,7 +25,7 @@
 
     <footer style="margin-top: 100px">
       <center>
-        <i style="color:gray;">&copy; Projet Python groupe web@cadémie bompar_a & Reygni_p</i>
+        <i style="color:gray;"></i>
       </center>
   </footer>
   </body>
