read stat char on nav ok

--- a/WebRTC/flask/app/templates/base.html
+++ b/WebRTC/flask/app/templates/base.html
@@ -15,6 +15,9 @@
    			 <div class="navbar-text">
    			 	<a href="/zheros" class="navbar-link">zHéros</a>
    			 </div>
+         <div class="navbar-text">
+          <a href="/room/list" class="navbar-link">Créer une partie</a>
+         </div>
    			 <div class="navbar-text navbar-right" style="margin-right:20px;">
    			 	<a href="/login" class="navbar-link">Login</a>
    			 </div>
