--- a/WebRTC/flask/app/templates/zheros.html
+++ b/WebRTC/flask/app/templates/zheros.html
@@ -14,7 +14,7 @@
 	      <div class="caption">
 	        <h3>{{ perso.name }}</h3>
 	        <p>Description/Stats</p>
-	        <p><a href="#" class="btn btn-primary" role="button">Jouer</a> <a href="#" class="btn btn-default" role="button">Détails</a></p>
+	        <p><a href="/room/list/" class="btn btn-primary" role="button">Jouer</a> <a href="/hero/{{perso.id}}" class="btn btn-default" role="button">Détails</a></p>
 	      </div>
 	    </div>
 	  </div>
