--- a/WebRTC/flask/app/templates/room.html
+++ b/WebRTC/flask/app/templates/room.html
@@ -9,6 +9,16 @@
             <div class="col-lg-3">
                 <h2>Mage Dayknor</h2>
                 <h3>Level : 9</h3>
+                
+                <h3>Visio</h3>
+                <div class="visioconf">
+                    <div class="localvideos">
+                        <video id="local" autoplay muted width="100%"></video>
+                    </div>
+                    <div >
+                        <button class="btn btn-primary form-control" id="video_call">Activer la vidéo</button>
+                    </div>
+                </div>
                 <h4>Progression : </h4>
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="75"
@@ -16,7 +26,7 @@
                         <span >156 / 200 EXP</span>
                     </div>
                 </div>
-                <img src="{{ url_for('static', filename='img/mage.jpg') }}" width="100%" height="200px">
+                
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="70"
                       aria-valuemin="0" aria-valuemax="100" style="width:70%; background-color: red">
@@ -30,12 +40,7 @@
                         <span >15 / 30 SP</span>
                     </div>
                 </div>
-                <h3>Visio</h3>
-                <div class="visioconf">
-                    <div class="localvideos">
-                        <video id="local" autoplay muted width="100%"></video>
-                    </div>
-                </div>
+                
             </div>
             <div class="col-lg-6">
                 <center><h2>Plateau de jeu N° {{room_id}}</h2></center>
@@ -60,7 +65,11 @@
         
         <div class="col-lg-3">
                 <h2>Maitre du jeu <b>JudgeDead</b></h2>
-                <img src="{{ url_for('static', filename='img/mj.jpg') }}" width="100%" height="200px">
+                <div class="remotevideos">
+                    Visio is loading ...
+                 <video id="remote" autoplay width="100%" height="200px"></video>
+
+                </div>
                 <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="50"
                       aria-valuemin="0" aria-valuemax="100" style="width:50%; background-color: red">
