--- a/WebRTC/flask/app/templates/zheros.html
+++ b/WebRTC/flask/app/templates/zheros.html
@@ -13,35 +13,13 @@
 	      <img src="http://i73.servimg.com/u/f73/11/13/70/81/elfe0210.gif" alt="#">
 	      <div class="caption">
 	        <h3>{{ perso.name }}</h3>
-	        <p>Description/Stats</p>
-	        <p><a href="/room/list/" class="btn btn-primary" role="button">Jouer</a> <a href="/hero/{{perso.id}}" class="btn btn-default" role="button">Détails</a></p>
+	        <p>Level : {{perso.level}}</p>
+	        <p><a href="/perso/{{perso.id}}" class="btn btn-primary" role="button">Jouer</a> <a href="/hero/{{perso.id}}" class="btn btn-default" role="button">Détails</a></p>
 	      </div>
 	    </div>
 	  </div>
 	</div>
     {% endfor %}
-	    <!-- Button trigger modal -->
-	<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-	  Launch demo modal
-	</button>
 
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-	      </div>
-	      <div class="modal-body">
-	        ...
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        <button type="button" class="btn btn-primary">Save changes</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>
 <a class="btn btn-default" href="/newhero" role="button">Nouveau Hero</a>
 {% endblock %}
