--- a/WebRTC/flask/app/templates/room.html
+++ b/WebRTC/flask/app/templates/room.html
@@ -8,6 +8,7 @@
         <div class="col-lg-12">
             <div class="col-lg-3">
                 <h2>{{persoJoueur.name}}</h2>
+                <input type="hidden" value="{{persoJoueur.name}}"></input>
                   <!-- Button trigger modal -->
                 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
                   Détail sur le personnage
