--- a/WebRTC/flask/app/templates/room_board.html
+++ b/WebRTC/flask/app/templates/room_board.html
@@ -51,12 +51,12 @@
                     <input type="text" id="party_name" class="form-control" />
                     <br />
                     <label>Nombre de joueurs</label>
-                    <select class="form-control">
-                        <option name="value" value="1">1</option>
-                        <option name="value" value="1">2</option>
-                        <option name="value" value="1">3</option>
-                        <option name="value" value="1">4</option>
-                        <option name="value" value="1">5</option>
+                    <select class="form-control" id="NBslot">
+                        <option name="value" value="1">1 Joueur</option>
+                        <option name="value" value="2">2 Joueur</option>
+                        <option name="value" value="3">3 Joueur</option>
+                        <option name="value" value="4">4 Joueur</option>
+                        <option name="value" value="5">5 Joueur</option>
                     </select>
                     <br />
                     <button class="btn btn-primary form-control" id="create_room">Créer partie</button>
