--- a/WebRTC/flask/app/templates/room.html
+++ b/WebRTC/flask/app/templates/room.html
@@ -85,7 +85,7 @@
                 <center><h2>Plateau de jeu N° {{room_id}}</h2></center>
                 <br /> <br /> <br /> <br /> <br /> <br /> <br />
 
-                <div class="chatbox_container" id="chatbox_container">
+                <div class="chatbox_container" id="chatbox_container" style="overflow : auto;">
                     <p><span style="color: red;">Maitre du jeu</span>  Btx dit : Bonjour et bienvenue sur la room {{room_id}}, je serais le maitre du jeu de cette partie !</p>
                     <p><span style="color: blue">Mage</span> Dayknor rejoint la partie {{room_id}} !</p>
                     <p><span style="color: blue">Mage</span> Dayknor dit -> : Salut all</p>
@@ -100,6 +100,22 @@
                 <div class="col-lg-2">
                     <button type="button" id="btn_send" class="btn btn-primary pull-right">Envoyer</button>
                 </div>
+                
+                <div class="col-lg-12 " style="margin-top : 10px">
+                  <div class="col-lg-3" style="padding: 20px">
+                    <div class="elem">
+                      <img src="azdeqs.jpg" width="100%" height="100px"/>
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="70"
+                          aria-valuemin="0" aria-valuemax="100" style="width:70%; background-color: red">
+                            <span >20/30 HP</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  
+                  
+              </div>
             </div>
         
         <div class="col-lg-3">
@@ -121,7 +137,8 @@
                 </div>
         </div>
         </div>
-    </div>
+        
+
     <footer>
         <span id="status" class="small"></span>
         <span id="streaming" class="small"></span>
