--- a/WebRTC/flask/app/templates/room.html
+++ b/WebRTC/flask/app/templates/room.html
@@ -101,19 +101,10 @@
                     <button type="button" id="btn_send" class="btn btn-primary pull-right">Envoyer</button>
                 </div>
                 
-                <div class="col-lg-12 " style="margin-top : 10px">
-                  <div class="col-lg-3" style="padding: 20px">
-                    <div class="elem">
-                      <img src="azdeqs.jpg" width="100%" height="100px"/>
-                      <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                          aria-valuemin="0" aria-valuemax="100" style="width:70%; background-color: red">
-                            <span >20/30 HP</span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                <div class="col-lg-12 playerlist_container" style="margin-top : 10px">
                   
+                </div>
+
                   
               </div>
             </div>
